<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enable_video_looping">Enable video looping</string>
    <string name="disable_video_looping">Disable video looping</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="theme_mode_amoled">AMOLED</string>
    <string name="material_you_dynamic">Material You dynamic theming</string>
    <string name="enable_material_you">Enable Material You</string>
    <string name="disable_material_you">Disable Material You</string>
    <string name="about">About</string>
    <string name="add_path">Add Video File Path</string>
    <string name="app_name">VideoLiveWallpaper</string>
    <string name="apply">Apply</string>
    <string name="choose_video_file">Choose Video File</string>
    <string name="add_video_file_path">Add Video File Path</string>
    <string name="cancel">Cancel</string>
    <string name="wallpaper_settings">Wallpaper settings</string>
    <string name="applications_settings">Application settings</string>
    <string name="settings">Settings</string>
    <string name="play_video_with_sound">Play video with sound</string>
    <string name="hide_icon_from_launcher">Hide icon from launcher</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="version">Version</string>
    <string name="version_name" translatable="false">0.1.4.4_200811_nano</string>
    <!--preference-->
    <string name="preference_play_video_with_sound" translatable="false">play_video_with_sound</string>
    <string name="preference_hide_icon_from_launcher" translatable="false">hide_icon_from_launcher</string>
</resources>
